--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "tsc": "tsc -p tsconfig.json",
         "ci": "npm run lint && npm run cov && npm run tsc",
         "lint": "eslint . --fix",
-        "clean": "tsc -b --clean"
+        "clean": "tsc -b --clean",
+        "sshVerify":"git config --global http.sslVerify 'false'"
     },
     "dependencies": {
         "egg": "^3.11.0",
