--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "ci": "npm run lint && npm run cov && npm run tsc",
         "lint": "eslint . --fix",
         "clean": "tsc -b --clean",
-        "sshVerify":"git config --global http.sslVerify 'false'"
+        "sshVerify":"git config --global http.sslVerify \"false\""
     },
     "dependencies": {
         "egg": "^3.11.0",
