--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "ci": "npm run lint && npm run cov && npm run tsc",
         "lint": "eslint . --fix",
         "clean": "tsc -b --clean",
-        "sshVerify":"git config --global http.sslVerify \"false\""
+        "sshVerify": "git config --global http.sslVerify \"false\""
     },
     "dependencies": {
         "egg": "^3.11.0",
@@ -29,6 +29,7 @@
         "egg-validate": "^2.0.2",
         "egg-view-nunjucks": "^2.3.0",
         "lodash": "^4.17.21",
+        "mkdirp": "^2.1.6",
         "moment": "^2.22.0",
         "mysql2": "^3.2.0"
     },
